# Test-Cpp

./: .gitignore  API.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: club-state.hpp  events.hpp  parser.hpp  run-day.hpp
src/: club-state.cpp  events.cpp  main.cpp  parser.cpp  run-day.cpp
test/: club-test.cpp  events-test.cpp  info.md  parser-test.cpp  run-day-test.cpp
